--- a/_config.yml
+++ b/_config.yml
@@ -14,21 +14,19 @@ author: Fábio Madeira
 # biomadeira.github.io - all contents run on /vitae/
 # for a normal use at the base of the server change it to "/"
 baseurl: /vitae/
-title: Chris Turner's Resume
-name: Chris Turner
-email: christurner@me.com
-email_full: mailto:youremail@me.com
+title: guxueqiao blog
+name: lincoln
+email: guxueqiao@gmail.com guxueqiao8888@163.com
+email_full: mailto:guxueqiao@gmail.com
 website: github.io/sustain
-website_full: https://biomadeira.github.io/sustain
+website_full: https://lincoln-gu.github.io/sustain
 github: trending
-twitter: twitter
-tel: +44 0000 000000
-tel_full: tel:+440000000000
-google_maps: 'https://www.google.co.uk/maps/place/44+Perth+St,+Edinburgh,+Edinburgh+City+EH3+5BL'
-address: 44 Perth Street
-postcode: EH3 5BL
-city: Edinburgh
-country: United Kingdom
+qq: 358998085
+tel: 18021160821
+tel_full: tel:
+postcode: 214000
+city: wuxi
+country: China
 google_analytics: UA-69300817-1
 
 # needed for travis-ci build
