--- a/_config.yml
+++ b/_config.yml
@@ -1,33 +1,69 @@
 highlighter: pygments
+
 markdown: rdiscount
+
 rdiscount:
+
   extensions: [smart]
+
 permalink: /:title.html
+
 paginate: 5
+
 gems: [jekyll-paginate]
+
 port: 4000
+
 safe: true
+
 url: http://biomadeira.github.io/vitae
+
 author: Fábio Madeira
 
+
+
 # edit this section with your information
+
 # biomadeira.github.io - all contents run on /vitae/
+
 # for a normal use at the base of the server change it to "/"
+
 baseurl: /vitae/
-title: guxueqiao blog
-name: lincoln
-email: guxueqiao@gmail.com guxueqiao8888@163.com
-email_full: mailto:guxueqiao@gmail.com
+
+title: Chris Turner's Resume
+
+name: Chris Turner
+
+email: christurner@me.com
+
+email_full: mailto:youremail@me.com
+
 website: github.io/sustain
-website_full: https://lincoln-gu.github.io/sustain
+
+website_full: https://biomadeira.github.io/sustain
+
 github: trending
-qq: 358998085
-tel: 18021160821
-tel_full: tel:
-postcode: 214000
-city: wuxi
-country: China
+
+twitter: twitter
+
+tel: +44 0000 000000
+
+tel_full: tel:+440000000000
+
+google_maps: 'https://www.google.co.uk/maps/place/44+Perth+St,+Edinburgh,+Edinburgh+City+EH3+5BL'
+
+address: 44 Perth Street
+
+postcode: EH3 5BL
+
+city: Edinburgh
+
+country: United Kingdom
+
 google_analytics: UA-69300817-1
 
+
+
 # needed for travis-ci build
+
 exclude: [vendor]
