--- a/_config.yml
+++ b/_config.yml
@@ -40,25 +40,25 @@ email_full: mailto:youremail@me.com
 
 website: github.io/sustain
 
-website_full: https://biomadeira.github.io/sustain
+website_full: https://lincoln-gu.github.io/sustain
 
 github: trending
 
 twitter: twitter
 
-tel: +44 0000 000000
+tel: 18021160821
 
-tel_full: tel:+440000000000
+tel_full: tel:18021160821
 
 google_maps: 'https://www.google.co.uk/maps/place/44+Perth+St,+Edinburgh,+Edinburgh+City+EH3+5BL'
 
-address: 44 Perth Street
+address: chunyang street
 
-postcode: EH3 5BL
+postcode: 214000
 
-city: Edinburgh
+city: wuxi  
 
-country: United Kingdom
+country: China
 
 google_analytics: UA-69300817-1
 
